# OpenOmniBot

./: .cnb.yml  .gitignore  AGENTS.md  GROWTH.md  README.md  README.zh-CN.md  gradle.properties  pyproject.toml
.cnb/backups/: independent-tag-release.cnb.yml
.github/codex/: README.md
.github/codex/prompts/: agent.md
.github/codex/scripts/: build-prompt.js  prepare-artifacts.js
.github/workflows/: codex-bot.yml  release.yml  release.yml.self-hosted.bak
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/: AndroidManifest.xml
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
assists/: build.gradle.kts
benchmarks/oob_project/: README.md  run_benchmark.py
benchmarks/oob_project/cases/: create_habit_checkin_crud.json  create_receipt_agent_project.json  export_canonical_project_skill.json  safety_forbidden_repo_mutation.json  update_counter_preserves_behavior.json
benchmarks/project_artifact/: CHECKERS.md  README.md  metrics.json  run_benchmark.py
benchmarks/project_artifact/adapters/: README.md
benchmarks/project_artifact/cases/: create_habit_checkin_crud.json  create_receipt_agent_project.json  safety_forbidden_repo_mutation.json
benchmarks/project_artifact/paper/: pabench_draft.md
desktop/: README.md
desktop/backend/: Cargo.toml
desktop/backend/crates/omnibot-agent/: Cargo.toml
desktop/backend/crates/omnibot-agent/src/: callback.rs  compactor.rs  lib.rs  memory.rs  mode_policy.rs  orchestrator.rs  prompt.rs  stream_event.rs  subagent.rs  tool_catalog.rs
desktop/backend/crates/omnibot-backend/: Cargo.toml
desktop/backend/crates/omnibot-backend/src/: boot.rs  lib.rs  main.rs  state.rs
desktop/backend/crates/omnibot-backend/src/api/: envelope.rs  mod.rs  router.rs  ws.rs
desktop/backend/crates/omnibot-backend/src/api/handlers/: app_state.rs  app_update.rs  assist_core.rs  cache_data.rs  codex_app_server.rs  device_info.rs  file_save.rs  mcp_server.rs  mod.rs  network.rs  remote_mcp_config.rs
desktop/backend/crates/omnibot-backend/src/api/handlers/assist_core/: agent_task.rs  conversation.rs  memory.rs  model_provider.rs  runtime_log.rs  skill.rs
desktop/backend/crates/omnibot-common/: Cargo.toml
desktop/backend/crates/omnibot-common/src/: errors.rs  lib.rs  log.rs  types.rs
desktop/backend/crates/omnibot-db/: Cargo.toml
desktop/backend/crates/omnibot-db/migrations/: 0001_init.sql
desktop/backend/crates/omnibot-db/src/: lib.rs
desktop/backend/crates/omnibot-db/src/entities/: agent_entry.rs  conversation.rs  mod.rs  token_usage.rs
desktop/backend/crates/omnibot-db/src/repos/: agent_entry_repo.rs  conversation_repo.rs  mod.rs  token_usage_repo.rs
desktop/backend/crates/omnibot-llm/: Cargo.toml
desktop/backend/crates/omnibot-llm/src/: chat_models.rs  client.rs  lib.rs  model_provider.rs  reasoning_policy.rs  scene_registry.rs  stream_accumulator.rs
desktop/backend/crates/omnibot-mcp/: Cargo.toml
desktop/backend/crates/omnibot-mcp/src/: client.rs  config_store.rs  lib.rs  models.rs
desktop/backend/crates/omnibot-storage/: Cargo.toml
desktop/backend/crates/omnibot-storage/src/: kv.rs  lib.rs  paths.rs  workspace.rs
desktop/backend/crates/omnibot-tools/: Cargo.toml
desktop/backend/crates/omnibot-tools/src/: concurrency.rs  lib.rs  router.rs  types.rs
desktop/backend/crates/omnibot-tools/src/handlers/: browser.rs  context.rs  file.rs  image_generation.rs  mcp_tool.rs  memory.rs  mod.rs  schedule.rs  skills.rs  subagent.rs  terminal.rs
desktop/browser-worker/: index.js  package.json
desktop/runner/: README.md  assets  pubspec.yaml
desktop/runner/lib/: main.dart
docs/: gui-agent-report-20260517.html  project-mode.html  recording_reliability.md  wzw-dev-vs-main-functional-diff.html  xiaowan-why.html
docs/agent_context/: INDEX.md  OOB_DEVICE_VALIDATION_2026-05-25.md  OOB_ONLINE_OFFLINE_SHARED_MEMORY.md  OOB_RUNLOG_UDEG_KEY_FUNCTION_RESEARCH.md  OOB_STARTUP_RUNBOOK.md  ROOT_FILE_INVENTORY.md
docs/articles/: xiaowan-wechat-launch.md
docs/omniflow/: ACCEPTANCE.md  FUNCTION_SPEC.md  GUI_AGENT_PLAYBOOK.md  MCP_CONTRACT.md  PYTHON_SDK.md  README.md  TESTED_PROJECTS.md  canonical-actions.md  checkers.md  cleanup-rules.md  manual-runlog-recording.md  oob-function-architecture.md  update-function.md
docs/reference/: OOB_INTEGRATION.md  OOB_VLM_ANDROIDWORLD.md  OOB_WORKBENCH_BACKEND_RUNTIME.md  agent-activity-rendering-v1.md  agent-stream-pipeline.md  agent-stream-runlog-implementation-report.html
gradle/: libs.versions.toml
omniflow_agentkit/: __init__.py  __main__.py  kit.py  mcp.py  openai_skill_runner.py  repo_probe.py
project_iterations/: INDEX.md  PART_ITERATION_LOG.md  VERSION_LOG.md
project_iterations/20260510-oob-workbench-backend-runtime/: plan.md  progress.md  result.md
project_iterations/20260516-oob-project-skill-consolidation/: plan.md  progress.md  result.md
project_iterations/20260517-oob-project-skill-optimization/: plan.md  progress.md  result.md
scripts/: androidworld_oob_eval.py  androidworld_oob_vlm_agent.py  configure-oob-model-provider.sh  demo-vlm-runlog-e2e.sh  generate_guiagent_cost_charts.py  install-dev.sh  mirror_github_release_to_cnb.py  omniflow_acceptance_all_guiagents.sh  omniflow_acceptance_external_repo.sh  omniflow_acceptance_mobilegpt.sh  omniflow_acceptance_oob_mcp_explore_replay.sh  omniflow_mock_mcp_server.py  oob-agent-conversation-function-validation.sh  oob-agent-function-management-validation.sh  oob-convert-runlog.sh  oob-device-manual-trace-validation.sh  oob-device-segment-validation.sh  oob-record-human-run.sh  oob-run-vlm-task.sh  oob-start.sh  prepare-oob-device.sh  start-oob-5556.sh  start-oob-vlm-device.sh
tests/: test_androidworld_oob_eval.py  test_omniflow_agentkit.py
tools/codex-bridge/: README.md  package-lock.json  package.json  server.mjs
ui/: pubspec.yaml
ui/lib/: app_bootstrap.dart
ui/test/: agent_tool_summary_card_test.dart  workbench_annotation_overlay_test.dart  workbench_todo_log_service_test.dart
uikit/: build.gradle.kts
workers/app-update-worker/: README.md  worker.js  wrangler.toml.example
(+890 files in other folders)
