[workspace]
resolver = "2"
members = [
    "crates/omnibot-backend",
    "crates/omnibot-agent",
    "crates/omnibot-llm",
    "crates/omnibot-tools",
    "crates/omnibot-mcp",
    "crates/omnibot-db",
    "crates/omnibot-storage",
    "crates/omnibot-common",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
authors = ["Omnimind"]
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
eventsource-stream = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
pin-project = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
globset = "0.4"
directories = "5"
portable-pty = "0.8"
encoding_rs = "0.8"
parking_lot = "0.12"
dashmap = "6"
once_cell = "1"

omnibot-common = { path = "crates/omnibot-common" }
omnibot-storage = { path = "crates/omnibot-storage" }
omnibot-db = { path = "crates/omnibot-db" }
omnibot-llm = { path = "crates/omnibot-llm" }
omnibot-mcp = { path = "crates/omnibot-mcp" }
omnibot-tools = { path = "crates/omnibot-tools" }
omnibot-agent = { path = "crates/omnibot-agent" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
